--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,22 +3,42 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-<servlet>
-    <servlet-name>testweb</servlet-name>
-    <servlet-class>com.demo.web.TestWeb</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>testweb</servlet-name>
-    <url-pattern>/test</url-pattern>
-</servlet-mapping>
 
-<servlet>
-    <servlet-name>catlist</servlet-name>
-    <servlet-class>com.demo.web.CatListWeb</servlet-class>
-</servlet>
-<servlet-mapping>
-    <servlet-name>catlist</servlet-name>
-    <url-pattern>/cats</url-pattern>
-</servlet-mapping>
+    <servlet>
+        <servlet-name>testweb</servlet-name>
+        <servlet-class>com.demo.web.TestWeb</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>testweb</servlet-name>
+        <url-pattern>/test</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>catlist</servlet-name>
+        <servlet-class>com.demo.web.CatListWeb</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>catlist</servlet-name>
+        <url-pattern>/cats</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>data</servlet-name>
+        <servlet-class>com.demo.web.PutDataWeb</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>data</servlet-name>
+        <url-pattern>/putData</url-pattern>
+    </servlet-mapping>
+
+
+    <servlet>
+        <servlet-name>register</servlet-name>
+        <servlet-class>com.demo.web.RegisterWeb</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>register</servlet-name>
+        <url-pattern>/register</url-pattern>
+    </servlet-mapping>
 
 </web-app>
