--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,23 +4,6 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <servlet>
-        <servlet-name>testweb</servlet-name>
-        <servlet-class>com.demo.web.TestWeb</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>testweb</servlet-name>
-        <url-pattern>/test</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>catlist</servlet-name>
-        <servlet-class>com.demo.web.CatListWeb</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>catlist</servlet-name>
-        <url-pattern>/cats</url-pattern>
-    </servlet-mapping>
 
     <servlet>
         <servlet-name>data</servlet-name>
@@ -30,8 +13,6 @@
         <servlet-name>data</servlet-name>
         <url-pattern>/putData</url-pattern>
     </servlet-mapping>
-
-
     <servlet>
         <servlet-name>register</servlet-name>
         <servlet-class>com.demo.web.RegisterWeb</servlet-class>
@@ -40,5 +21,13 @@
         <servlet-name>register</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
+    <filter>
+        <filter-name>encoding</filter-name>
+        <filter-class>com.demo.web.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>encoding</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
 
 </web-app>
